--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laraveles/spanish": "^1.2",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^5.1",
+        "reliese/laravel": "^0.0.16",
         "simplesoftwareio/simple-qrcode": "~2",
         "skovmand/mailchimp-laravel": "^1.0",
         "spatie/laravel-newsletter": "^4.2",
@@ -24,8 +25,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "reliese/laravel": "*"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [
